# xtp

include/votca/ctp/: apolarsite.h  espfit.h  gauss_hermite.h  gdma.h  gdma_internal.h  polarseg.h  qmapemachine.h  qmatom.h  qmmachine.h  radial_euler_maclaurin_rule.h
include/votca/xtp/: apolarsite.h  espfit.h  gdma.h  polarseg.h  qmapemachine.h  qmatom.h  qmmachine.h  radial_euler_maclaurin_rule.h
include/votca/xtp/gpu/: GPUAOBasis.cuh  GPUAOBasis.h  GPUCTypes.cuh  GPUGridBox.cuh  GPUGridBox.h  GPUNumericalIntegration.cuh  GPUNumericalIntegration.h  GPUNumericalIntegrationTools.cuh  GPUTools.cuh
netbeans/libctp/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  configurations.xml
netbeans/libxtp/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  configurations.xml
src/libctp/: aobasis.cc  espfit.cc  gdma.cc  gdma_internal.cc  polarseg.cc  qmapemachine.cc  qmmachine.cc
src/libctp/aomatrices/: aocoulomb.cc  aooverlap.cc
src/libctp/gwbse/: gwbse.cc
src/libctp/numerical_integration/: gauss_hermite.cc
src/libxtp/: CMakeLists.txt  aobasis.cc  espfit.cc  gdma.cc  polarseg.cc  qmapemachine.cc  qmmachine.cc  toolfactory.cc
src/libxtp/aomatrices/: aocoulomb.cc  aooverlap.cc
src/libxtp/gpu/: CMakeLists.txt  GPUAOBasis.cu  GPUGridBox.cu  GPUNumericalIntegration.cu
src/libxtp/gpu/kernels/: IntegrationKernels.cuh  VecFuncs.cuh
src/libxtp/qmpackages/: gaussian.cc
src/libxtp/tools/: GPUNumericalIntegrationTest.cu  GPUNumericalIntegrationTest.h  qmanalyze.cc  qmanalyze.h
